@@ -183,11 +183,14 @@ private:
     // updates the list of current archive contents
     const ZipContents& updateZipContents();
 
+    // Default hint in case the 'm_archive' is not set
+    void warningZipNotSet() const;
+
     // the void pointer is used to allow the miniz header not to be included
     void *m_archive = nullptr;
 
     // whether to display more info into the terminal
-    bool m_verbose = true;
+    bool m_verbose = false;
 
     // path to the current zip file
     QString m_zip_path;
