@@ -1,9 +1,10 @@
 QMicroz v0.5
-* Added the ability to disable the verbose mode for member functions.
+* Reduced verbosity. Added the ability to enable the verbose mode for member functions.
 * Added static functions 'isArchive' and 'isZipFile' to avoid the need to implement such checks in the project code.
 * Added function BufFile::size for a more convenient obtaining file size.
 * Reference comments have been improved.
-* Added unit tests
+* Added unit tests.
+* Fixed static build on Windows MinGW.
 
 QMicroz v0.4
 * It is now possible to request extended information about items contained in the archive.
